# Parallel-Image-Processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ALGORITHMS.md  SETUP.md
images/samples/: README.md
src/: main.cpp
